<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#283442"
    tools:context="kodluyoruz.com.kdvhesaplayici.MainActivity">

    <TextView
        android:id="@+id/activity_main_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/kdvhesapla"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/frameLayout2"
        android:layout_below="@+id/activity_main_tv"
        android:layout_marginTop="10dp"
        android:background="#1E2832">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/activity_main_btnKdv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:text="@string/yuzde1"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


            <Button
                android:id="@+id/activity_main_btnKdv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:text="@string/yuzde8"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_main_btnKdv18"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:text="@string/yuzde18"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#1E2832">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/activity_main_btnKdvDahil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:text="@string/kdvdahil"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


            <Button
                android:textAllCaps="false"

                android:id="@+id/activity_main_btnKdvHaric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:text="@string/kdvharic"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#1E2832">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:gravity="fill_vertical"
                android:text="@string/tutar"
                android:textColor="#8D99A5"
                android:textSize="22sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/activity_main_etKdvTutari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberSigned"
                 android:background="#1E2832"
                android:gravity="right"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


        </LinearLayout>


    </FrameLayout>


    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#1E2832"
        android:layout_below="@+id/frameLayout3"
        android:layout_alignStart="@+id/frameLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/activity_main_tvKdv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/frameLayout4"
                android:layout_alignTop="@+id/frameLayout4"
                android:layout_weight="1"
                android:background="#1E2832"
                android:gravity="fill_vertical"
                android:text="@string/tvkdvharic"
                android:textColor="#8D99A5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/activity_main_tvkdvHaric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:gravity="right"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/frameLayout4"
        android:layout_below="@+id/frameLayout4"
        android:layout_marginTop="5dp"
        android:background="#1E2832"
        android:id="@+id/frameLayout5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:gravity="fill_vertical"
                android:text="@string/kdvtutari"
                android:textColor="#8D99A5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_tvkdvTutari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#1E2832"
                android:gravity="right"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


        </LinearLayout>


    </FrameLayout>




</RelativeLayout>
